--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 LojaAPI/.vs
-LojaAPI/bin
-LojaAPI/obj
-LojaAPITests/bin
-LojaAPITests/obj
+LojaAPI/LojaAPI/bin
+LojaAPI/LojaAPI/obj
+LojaAPI/LojaAPITests/bin
+LojaAPI/LojaAPITests/obj
