--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ LojaAPI/LojaAPI/bin
 LojaAPI/LojaAPI/obj
 LojaAPI/LojaAPITests/bin
 LojaAPI/LojaAPITests/obj
+LojaAPI/bin
+LojaAPI/obj
+LojaAPITests/bin
+LojaAPITests/obj
