--- a/LojaAPI/LojaAPI/appsettings.json
+++ b/LojaAPI/LojaAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "LojaMSSQL": "Data Source=(LocalDB)\\MSSQLLocalDB;Integrated Security=True"
+    "LojaMSSQL": "Server=DESKTOP-QD19KFH;Database=DB_LOJA;TrustServerCertificate=True;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
